--- a/pom.xml
+++ b/pom.xml
@@ -61,8 +61,10 @@
 				<version>2.21.0</version>
 				<configuration>
 					<suiteXmlFiles>
-						<suiteXmlFile>testng_runner.xml</suiteXmlFile>
+						<!-- this line tell maven surefire plugin which file should be executed -->
+						<suiteXmlFile>${runner}</suiteXmlFile>
 					</suiteXmlFiles>
+					<testFailureIgnore>true</testFailureIgnore>
 				</configuration>
 			</plugin>
 		</plugins>
